corrected right person to the schedule

--- a/program-thursday.html
+++ b/program-thursday.html
@@ -252,9 +252,9 @@
                     </div>
                    
                     <div class="flex-item">
-                      <div class="image"><a><img src="images/speakers/2023/Angelica-Flechas.jpg"></a></div>
-                      <h3>Angélica Flechas</h3>
-                      <p>Founder of HÁPTICA, a service design consultancy agency<span class="read-more-text">. Angélica Flechas is a designer and a lawyer from Los Andes University in Bogotá Colombia. She has been working on service design for 9 years. She fell in love with this design wave when she presented a paper at the Global Service Design Conference in Helsinki in 2012 – Servdes. Then she decided to create her own Service Design Consultancy Agency – HÁPTICA – where she runs as Founder, Service, and Legal Designer Consultant, and General Manager. She has worked in different areas such as retail, FMCG, finance, hotels, health care, insurance, education, construction, government, and law offices, among others. She is also a teacher in the Business Administration and the Law program at Los Andes University.</span></p>
+                      <div class="image"><a><img src="images/speakers/2023/marie-potel-saville.png"></a></div>
+                      <h3>Marie Potel-Saville</h3>
+                      <p>Founder of Amurabi, Lecturer at Sciences Po Paris, Singapore Management University and Assas<span class="read-more-text">. Marie Potel-Saville is the founder of Amurabi, an award-winning legal innovation studio, and www.fairpatterns.com, a platform dedicated to fight against dark patterns and train all stakeholders to avoid them. She is an international keynote speaker in human-centric law and legal innovation by design (IAPP Global Privacy Summit, W@Privacy, Computer Privacy and Data Protection, LegalGeek…).<br><br>Before founding Amurabi, she worked in private practice for 10 years (Freshfields, Allen & Overy) in Europe, then moved in-house to become GC EMEA of a US listed group.  She holds a Master’s Degree in Innovation by Design at ENSCI. She is also a member of the Advisory Board of the Serpentine Galleries’ Legal Lab and is involved in pro bono access to access initiatives. Marie teaches innovation by design at Singapore Management University, Sciences Po and Assas.</span></p>
                       <span class="read-more-btn">Read More...</span>
                     </div>
                   </div>
