added new logos and one speaker

--- a/footer.html
+++ b/footer.html
@@ -25,12 +25,13 @@
       <li class="flex-item" style="width: 180px;"><img src="images/collabs/LD_logo_pieni_sb.png"></a></li>
       <li class="flex-item" style="width: 150px;"><img src="images/collabs/Foyen_svart.png"></a></li>
       <li class="flex-item" style="width: 130px;"><img src="images/collabs/AlmaTalent_black_rgb.png"></a></li>
-      <li class="flex-item" style="width: 100px;"><img src="images/collabs/pickering_pearce_logo.png"></a></li>
+      <li class="flex-item" style="width: 110px;"><img src="images/collabs/Pickering-Pearce-Logo-new.png"></a></li>
       <li class="flex-item" style="width: 90px;"><img src="images/collabs/Treehouse-Jul2016.png"></a></li>
       <li class="flex-item" style="width: 110px;"><img src="images/collabs/Dottir-logo-musta.jpg"></a></li>
       <li class="flex-item" style="width: 140px;"><img src="images/collabs/Tietoevry.png"></a></li>
       <li class="flex-item" style="width: 90px;"><img src="images/collabs/Edita.png"></a></li>
       <li class="flex-item" style="width: 100px;"><img src="images/collabs/DLA_Piper.jpg"></a></li>
+      <li class="flex-item" style="width: 120px;"><img src="images/collabs/Simmons_&_Simmons_logo.svg.png"></a></li>
 
       </ul>
       <p><strong>IN CO-OPERATION WITH:</strong></p>
@@ -62,6 +63,7 @@
       <li class="flex-item" style="width: 140px;"><img src="images/collabs/Erasmus_program.PNG"></a></li>
       <li class="flex-item" style="width: 100px;"><img src="images/collabs/Helsinki_Court_of_Appeal.png"></a></li>
       <li class="flex-item" style="width: 250px;"><img src="images/collabs/tr_Helsingborg_logo.png"></a></li>
+      <li class="flex-item" style="width: 200px;"><img src="images/collabs/Bond-University.jpg"></a></li>
 
       </ul>
     </div>
