--- a/program-thursday.html
+++ b/program-thursday.html
@@ -229,12 +229,15 @@
                     </div>
                     
                     <div class="flex-item">
-                      <div class="image"><a><img src="images/events/event-1.png"></a></div>
+                      <div class="image"><a><img src="images/speakers/2023/Dorra-Harrar.jpg"></a></div>
                       <h3>Dorra Harrar</h3>
-                      <!--
-                      <p>Title<span class="read-more-text">. story</span></p>
+                      <p>Founder of Legal.D, the first legal design agency in the MENA region<span class="read-more-text">. Dorra Harrar is a humanist business lawyer and the first expert practitioner, a pioneer of legal design, in the MENA region. She is a founder of Legal.D, the first legal design agency in the MENA region, based in Tunisia.
+                        <br><br>Dorra combines her advanced experience as a business lawyer with her creative, innovative and humanistic spirit to help companies and individuals make their legal documents clear, understandable, and efficient, to enable change into a strategic drive for business and insure human dignity.
+                        <br><br>Dorra has worked on several legal design projects in social and business fields, both nationally and internationally, and has succeeded in using legal design in a litigation case for the first time before a Tunisian court.
+                        <br><br>In 2022, Dorra won the WorldCC Innovation & Excellence award in the personal initiative category. The award recognized Dorra’s significant impact in business and its unique contribution to challenging the status quo of the practice of law in her country.
+                        <br>She also organized, in Tunisia, the first legal design workshop for law students and has been invited to speak at national and international events.
+                        </span></p>
                       <span class="read-more-btn">Read More...</span>
-                      -->
                     </div>
       
                     <div class="flex-item">
