--- a/index.html
+++ b/index.html
@@ -321,12 +321,13 @@
 			<li class="flex-item" style="width: 300px"><a href="https://lawyersdesignschool.com/" target="_blank"><img src="images/collabs/LD_logo_pieni_sb.png"></a></li>
 			<li class="flex-item" style="width: 300px"><a href="https://www.foyen.se/en/" target="_blank"><img src="images/collabs/Foyen_svart.png"></a></li>
 			<li class="flex-item" style="width: 250px"><a href="https://www.almatalent.fi/" target="_blank"><img src="images/collabs/AlmaTalent_black_rgb.png"></a></li>
-			<li class="flex-item" style="width: 190px"><a href="https://www.linkedin.com/company/pickering-pearce/about/" target="_blank"><img src="images/collabs/pickering_pearce_logo.png"></a></li>
+			<li class="flex-item" style="width: 220px"><a href="https://www.linkedin.com/company/pickering-pearce/about/" target="_blank"><img src="images/collabs/Pickering-Pearce-Logo-new.png"></a></li>
 			<li class="flex-item" style="width: 190px"><a href="https://treehouseinnovation.com/" target="_blank"><img src="images/collabs/Treehouse-Jul2016.png"></a></li>
 			<li class="flex-item" style="width: 190px;"><a href="https://www.dottirlaw.com/" target="_blank"><img src="images/collabs/Dottir-logo-musta.jpg"></a></li>
 			<li class="flex-item" style="width: 250px"><a href="https://www.tietoevry.com/fi/" target="_blank"><img src="images/collabs/Tietoevry.png"></a></li>
 			<li class="flex-item" style="width: 170px"><a href="https://shop.edita.fi/" target="_blank"><img src="images/collabs/Edita.png"></a></li>
 			<li class="flex-item" style="width: 200px"><a href="https://www.dlapiper.com/en-us" target="_blank"><img src="images/collabs/DLA_Piper.jpg"></a></li>
+			<li class="flex-item" style="width: 230px"><a href="https://www.simmons-simmons.com/" target="_blank"><img src="images/collabs/Simmons_&_Simmons_logo.svg.png"></a></li>
 		</ul>
 		</div>  		
 	  </div>
@@ -423,6 +424,7 @@
 	<li class="flex-item" style="width: 260px;"><a href="https://www.uchceu.com/en/advanced-learning-facilities/legal-tech" target="_blank"><img src="images/collabs/Erasmus_program.PNG"></a></li>
 	<li class="flex-item" style="width: 200px;"><a href="https://oikeus.fi/hallintooikeudet/helsinginhallinto-oikeus/en/index.html" target="_blank"><img src="images/collabs/Helsinki_Court_of_Appeal.png"></a></li>
 	<li class="flex-item" style="width: 390px;"><a href="https://www.domstol.se/helsingborgs-tingsratt/" target="_blank"><img src="images/collabs/tr_Helsingborg_logo.png"></a></li>
+	<li class="flex-item" style="width: 270px;"><a href="https://bond.edu.au/" target="_blank"><img src="images/collabs/Bond-University.jpg"></a></li>
   </ul>
 
 </div>
