Added logos, added volunteer page, corrected misspeling

--- a/about-us.html
+++ b/about-us.html
@@ -60,6 +60,7 @@
         <li class=""><a href="brainfactory.html">BrainFactory</a></li>
 		    <li class=""><a href="about-us.html">About Us</a></li>
         <li class=""><a href="tickets.html">Tickets</a></li>
+        <li class=""><a href="volunteer.html">Volunteer</a></li>
 		    <li class=" last"><a href="why-attend.html">Why attend?</a></li>
 		  </ul>
 		</div>
@@ -222,7 +223,7 @@
             <div class="col-md-4">
               <h3 style="font-size: 25px;">President of the Board<br><br></h3>
               <div class="image"><a href="mailto:noora.rissanen@legaldesignsummit.com"><img src="images/team/team-2023/noora-rissanen.jpg"></a></div>
-              <p>Noora Rissanen<br><span class="small"></p>
+              <p>Noora Metsärinne<br><span class="small"></p>
               <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/noorarissanen/" class="icon linkedin">LinkedIn</a></span></p>
             </div>
             <div class="col-md-4">
