--- a/footer.html
+++ b/footer.html
@@ -32,6 +32,7 @@
       <li class="flex-item" style="width: 90px;"><img src="images/collabs/Edita.png"></a></li>
       <li class="flex-item" style="width: 100px;"><img src="images/collabs/DLA_Piper.jpg"></a></li>
       <li class="flex-item" style="width: 120px;"><img src="images/collabs/Simmons_&_Simmons_logo.svg.png"></a></li>
+      <li class="flex-item" style="width: 180px;"><img src="images/collabs/Booking_com.png"></a></li>
 
       </ul>
       <p><strong>IN CO-OPERATION WITH:</strong></p>
@@ -64,6 +65,9 @@
       <li class="flex-item" style="width: 100px;"><img src="images/collabs/Helsinki_Court_of_Appeal.png"></a></li>
       <li class="flex-item" style="width: 250px;"><img src="images/collabs/tr_Helsingborg_logo.png"></a></li>
       <li class="flex-item" style="width: 200px;"><img src="images/collabs/Bond-University.jpg"></a></li>
+      <li class="flex-item" style="width: 170px;"><img src="images/collabs/Helsinki_District_Court_Logo.jpg"></a></li>
+      <li class="flex-item" style="width: 230px;"><img src="images/collabs/Save_the_Children.png"></a></li>
+      <li class="flex-item" style="width: 200px;"><img src="images/collabs/Domstolsverket.png"></a></li>
 
       </ul>
     </div>
