--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 			<li class=""><a href="brainfactory.html">BrainFactory</a></li>
 		    <li class=""><a href="about-us.html">About Us</a></li>
 			<li class=""><a href="tickets.html">Tickets</a></li>
+			<li class=""><a href="volunteer.html">Volunteer</a></li>
 		    <li class=" last"><a href="why-attend.html">Why attend?</a></li>
 		  </ul>
 		</div>
@@ -147,7 +148,8 @@
 					</div>
 					<h1 style="color: white;">Legal Design Summit</h1>
 					<p class="slogan-enhanced">11–13 SEP BRAINFACTORY | 14–15 SEP SUMMIT | HELSINKI, FINLAND</p><br><br>
-					<p class="slogan-long">Legal Design Summit is a platform for forward-thinking professionals from all over the globe.<br><br>The Largest legal design event in the world takes place in the main hall of the University of Helsinki.</p>
+					<p class="slogan-long" style="font-weight: bold;">We are now looking for volunteers, <a href="volunteer.html" style="color: #50cec1; text-decoration: underline; font-weight: bold;">enlist here!</a></p>
+					<p class="slogan-long">Legal Design Summit is a platform for forward-thinking professionals from all over the globe.<br><br>The Largest legal design event in the world takes place in the Great Hall of the University of Helsinki, Unioninkatu 34.</p>
 				</div>
 			</div>
         <!-- HEADER Section Ends -->
@@ -255,6 +257,10 @@
 				<h3 >Announcements</h3>
 				<ul style="padding-top: 50px; text-align: left;">
 					<li style="padding-bottom: 10px;">
+						<h4>11 Auguts 2023</h4>
+						<p style="font-size: 20px;">We are looking for volunteers to help during the Legal Design Summit in making it a success <a href="volunteer.html" style="color: #50cec1; text-decoration: underline;">See more</a></p>
+					</li>
+					<li style="padding-bottom: 10px;">
 						<h4>3 July 2023</h4>
 						<p style="font-size: 20px;">Preliminary timetable for the main event is publish - find out the start and end times of the program to help you plan your trip to Helsinki! <a href="program-thursday.html" style="color: #50cec1; text-decoration: underline;">See more</a></p>
 					</li>
@@ -321,13 +327,14 @@
 			<li class="flex-item" style="width: 300px"><a href="https://lawyersdesignschool.com/" target="_blank"><img src="images/collabs/LD_logo_pieni_sb.png"></a></li>
 			<li class="flex-item" style="width: 300px"><a href="https://www.foyen.se/en/" target="_blank"><img src="images/collabs/Foyen_svart.png"></a></li>
 			<li class="flex-item" style="width: 250px"><a href="https://www.almatalent.fi/" target="_blank"><img src="images/collabs/AlmaTalent_black_rgb.png"></a></li>
-			<li class="flex-item" style="width: 220px"><a href="https://www.linkedin.com/company/pickering-pearce/about/" target="_blank"><img src="images/collabs/Pickering-Pearce-Logo-new.png"></a></li>
+			<li class="flex-item" style="width: 220px"><a href="http://www.pickeringpearce.com/" target="_blank"><img src="images/collabs/Pickering-Pearce-Logo-new.png"></a></li>
 			<li class="flex-item" style="width: 190px"><a href="https://treehouseinnovation.com/" target="_blank"><img src="images/collabs/Treehouse-Jul2016.png"></a></li>
 			<li class="flex-item" style="width: 190px;"><a href="https://www.dottirlaw.com/" target="_blank"><img src="images/collabs/Dottir-logo-musta.jpg"></a></li>
 			<li class="flex-item" style="width: 250px"><a href="https://www.tietoevry.com/fi/" target="_blank"><img src="images/collabs/Tietoevry.png"></a></li>
 			<li class="flex-item" style="width: 170px"><a href="https://shop.edita.fi/" target="_blank"><img src="images/collabs/Edita.png"></a></li>
 			<li class="flex-item" style="width: 200px"><a href="https://www.dlapiper.com/en-us" target="_blank"><img src="images/collabs/DLA_Piper.jpg"></a></li>
 			<li class="flex-item" style="width: 230px"><a href="https://www.simmons-simmons.com/" target="_blank"><img src="images/collabs/Simmons_&_Simmons_logo.svg.png"></a></li>
+			<li class="flex-item" style="width: 320px"><a href="https://www.booking.com/" target="_blank"><img src="images/collabs/Booking_com.png"></a></li>
 		</ul>
 		</div>  		
 	  </div>
@@ -421,10 +428,13 @@
 	<li class="flex-item"><a href="https://www.elegal.technology/" target="_blank"><img src="images/collabs/logo-eLegal.png"></a></li>
 	<li class="flex-item" style="width: 370px;"><a href="https://www.laurea.fi/en/" target="_blank"><img src="images/collabs/Laurea.png"></a></li>
 	<li class="flex-item" style="width: 240px;"><a href="https://www.uef.fi/en" target="_blank"><img src="images/collabs/UEF.jpg"></a></li>
-	<li class="flex-item" style="width: 260px;"><a href="https://www.uchceu.com/en/advanced-learning-facilities/legal-tech" target="_blank"><img src="images/collabs/Erasmus_program.PNG"></a></li>
 	<li class="flex-item" style="width: 200px;"><a href="https://oikeus.fi/hallintooikeudet/helsinginhallinto-oikeus/en/index.html" target="_blank"><img src="images/collabs/Helsinki_Court_of_Appeal.png"></a></li>
 	<li class="flex-item" style="width: 390px;"><a href="https://www.domstol.se/helsingborgs-tingsratt/" target="_blank"><img src="images/collabs/tr_Helsingborg_logo.png"></a></li>
 	<li class="flex-item" style="width: 270px;"><a href="https://bond.edu.au/" target="_blank"><img src="images/collabs/Bond-University.jpg"></a></li>
+	<li class="flex-item" style="width: 250px;"><a href="https://oikeus.fi/karajaoikeudet/helsinginkarajaoikeus/en/index.html" target="_blank"><img src="images/collabs/Helsinki_District_Court_Logo.jpg"></a></li>
+	<li class="flex-item" style="width: 300px;"><a href="https://www.pelastakaalapset.fi/en/frontpage/" target="_blank"><img src="images/collabs/Save_the_Children.png"></a></li>
+	<li class="flex-item" style="width: 270px;"><a href="https://www.domstol.se/domstolsverket/other-languages/english/" target="_blank"><img src="images/collabs/Domstolsverket.png"></a></li>
+	<li class="flex-item" style="width: 240px;"><a href="https://www.uchceu.com/en/advanced-learning-facilities/legal-tech" target="_blank"><img src="images/collabs/Erasmus_program.PNG"></a></li>
   </ul>
 
 </div>
