--- a/program-friday.html
+++ b/program-friday.html
@@ -79,6 +79,7 @@
         <li class=""><a href="brainfactory.html">BrainFactory</a></li>
 		    <li class=""><a href="about-us.html">About Us</a></li>
         <li class=""><a href="tickets.html">Tickets</a></li>
+        <li class=""><a href="volunteer.html">Volunteer</a></li>
 		    <li class=" last"><a href="why-attend.html">Why attend?</a></li>
 		  </ul>
 		</div>
@@ -119,7 +120,7 @@
       <tbody class="timetable" style="padding-left: 20px;">
         <tr>
           <td><h3>09.00-10.00</h3></td>
-          <td><h3>Doors open</h3></td>
+          <td><h3>Doors open @ Great Hall of the University of Helsinki, Unioninkatu 34</h3></td>
         </tr>
         <tr>
           <td><h3>10.00</h3></td>
