--- a/program-thursday.html
+++ b/program-thursday.html
@@ -88,6 +88,7 @@
         <li class=""><a href="brainfactory.html">BrainFactory</a></li>
 		    <li class=""><a href="about-us.html">About Us</a></li>
         <li class=""><a href="tickets.html">Tickets</a></li>
+        <li class=""><a href="volunteer.html">Volunteer</a></li>
 		    <li class=" last"><a href="why-attend.html">Why attend?</a></li>
 		  </ul>
 		</div>
@@ -128,7 +129,7 @@
       <tbody class="timetable" style="padding-left: 20px;">
         <tr>
           <td><h3>09.00-10.00</h3></td>
-          <td><h3>Registration and coffee</h3></td>
+          <td><h3>Registration and coffee @ Great Hall of the University of Helsinki, Unioninkatu 34</h3></td>
         </tr>
         <tr>
           <td><h3>10.00-10.15</h3></td>
@@ -166,7 +167,9 @@
                     <div class="flex-item">
                       <div class="image"><a><img src="images/speakers/2023/Mel-Flanagan.png"></a></div>
                       <h3>Mel Flanagan</h3>
-                      <p>is an Information designer, creative director, storyteller, content maker, producer,and advocate<span class="read-more-text">. Mel Flanagan is a global transparency, social justice, environmental, open government advocate, and designer, with a background in theatre and filmmaking. She is the founder of Nook Studios, a social enterprise and company of researchers, artists, designers, and civic technologists based in Sydney, Australia. Mel and the Nook crew design revolutionary content and information products to help people simply explain, connect, and visualise complex information and processes such as legislation and regulations, making them easier to follow, analyse, and improve. Experiences include natural resource governance, mining, oil, gas, infrastructure projects, environmental approvals, government decision making processes, procurement pathways.<br><br>Mel speaks regularly about the role of design in making positive social and environment impact and various open initiatives such as open contracting. Nook run workshops to share their approach and are producing open-source digital tools to help everyone communicate more effectively and bring processes and data to life in engaging ways for community audiences.</span></p>
+                      <p>Founder Nook Studios, advocate, information designer, creative director, storyteller<span class="read-more-text">. Mel Flanagan  is a global social justice, environmental, open government advocate, and designer, with a background in theatre and filmmaking. Nook Studios is a social enterprise of researchers, artists, designers, and civic technologists based in Sydney, Australia.
+                        <br><br>Nook design revolutionary content and information products to help people simply explain, connect, and visualise complex information such as legislation and regulations - making them easier to follow, analyse, and improve. Nook's experience includes natural resource governance, (mining, oil, gas), infrastructure projects, environmental approvals, government decision making processes, contracting and procurement pathways.
+                        <br><br>Mel regularly speaks about the role of design in making positive social and environment impact and open initiatives such as open contracting. Nook run workshops to share their approach and are producing open-source digital tools to help everyone communicate more effectively and bring processes and data to life in engaging ways for community audiences.</span></p>
                       <span class="read-more-btn">Read More...</span>
                     </div>
       
