--- a/tickets.html
+++ b/tickets.html
@@ -79,7 +79,8 @@
 		    <li class=""><a href="program-thursday.html">Program</a></li>
         <li class=""><a href="brainfactory.html">BrainFactory</a></li>
 		    <li class=""><a href="about-us.html">About Us</a></li>
-            <li class=""><a href="tickets.html">Tickets</a></li>
+        <li class=""><a href="tickets.html">Tickets</a></li>
+        <li class=""><a href="volunteer.html">Volunteer</a></li>
 		    <li class=" last"><a href="why-attend.html">Why attend?</a></li>
 		  </ul>
 		</div>
