added missing profile information

--- a/program-friday.html
+++ b/program-friday.html
@@ -158,10 +158,10 @@
                     <div class="flex-item">
                       <div class="image"><a><img src="images/speakers/2023/joaquin-santuber.jpg"></a></div>
                       <h3>Joaquin Santuber</h3>
-                      <!--
-                      <p>Title<span class="read-more-text">. story</span></p>
+                      <p>Postdoctoral researcher on designing for posthuman legalities—human-nature-machine relations<span class="read-more-text">. Joaquín Santuber is a postdoctoral researcher on designing for posthuman legalities—human-nature-machine relations. He is also a research fellow at the Plataforma Sociedad, Diseño y Tecnología, School of Design UC, Chile. His doctoral research in Design and Digital Technologies at the Hasso-Plattner-Institute, University of Potsdam (Germany) focused on designing for digital justice, studying the entanglement between people, law, and technologies in Chilean courts. Taking an interdisciplinary approach, Joaquín’s work addresses questions about the governance of technology in judicial organizations and the tensions between the regulative power of digital technologies and the traditional sources of legal regulation by the State.
+                        <br><br>He has published on design theory and methodology, as part of the Digital Health Design Lab. He has been affiliated with the HPI-Stanford Design Thinking Research Program, visiting researcher at the Center for Social Studies (CES), University of Coimbra, Portugal, and a research fellow at Humboldt's Institute for Internet and Society, Berlin, Germany. Joaquín was also the co-founder of This is Legal Design, Berlin, and the Center for Advanced Design Studies, Palo Alto, USA. Joaquín Santuber holds a law degree from the Pontificia Universidad Católica de Chile. 
+                        </span></p>
                       <span class="read-more-btn">Read More...</span>
-                      -->
                     </div>
 
                     <div class="flex-item">
@@ -226,12 +226,19 @@
                 
                   <div class="flex-container">
                     <div class="flex-item">
-                      <div class="image"><a><img src="images/events/event-1.png"></a></div>
+                      <div class="image"><a><img src="images/speakers/2023/Lina-Krawietz.jpg"></a></div>
                       <h3>Lina Krawietz</h3>
-                      <!--
-                      <p>Title<span class="read-more-text">. story</span></p>
+                      <p>Lawyer, UX-/UI-Designer and HPI-certified Design Thinker<span class="read-more-text">. Lina Krawietz is a Lawyer, UX-/UI-Designer and HPI-certified Design Thinker. In 2018, she co-founded the Berlin-based legal innovation consultancy This is Legal Design. The company advises in-house legal departments and law firms on designing user-centered (digital) legal products, processes, services, communication.
+                        <br><br>Before fully specializing in Legal Design, Lina worked as a Design Thinker in software innovation at SAP and as a Customer Success Manager at LAWLIFT, a legal tech company for document automation & knowledge management.</span></p>
                       <span class="read-more-btn">Read More...</span>
-                      -->
+                    </div>
+
+                    <div class="flex-container">
+                      <div class="flex-item">
+                        <div class="image"><a><img src="images/speakers/2023/Alisha-Andert.jpg"></a></div>
+                        <h3>Alisha Andert</h3>
+                        <p>LL.M., Co-founder of the "This is Legal Design" (innovation consultancy)<span class="read-more-text">. Alisha Andert, LL.M. (Amsterdam) is a fully qualified lawyer and also completed a design thinking degree at the Hasso Plattner Institute. She is co-founder of the innovation consultancy This is Legal Design, which specializes in the legal sector. Alisha is also the Chairwoman of the Board of the German Legal Tech Association and gained experience in the legal tech sector in her role as Head of Legal Innovation at Flightright and the digital employment law firm Chevalier. She also hosts the Talentrocket podcast "New Lawyers" and talks in this role with exciting people inside and outside the legal market.</span></p>
+                        <span class="read-more-btn">Read More...</span>
                     </div>
 
                     <div class="flex-item">
