--- a/program-thursday.html
+++ b/program-thursday.html
@@ -290,12 +290,10 @@
                     </div>
       
                     <div class="flex-item">
-                      <div class="image"><a><img src="images/events/event-1.png"></a></div>
+                      <div class="image"><a><img src="images/speakers/2023/Riikka-Koulu.jpg"></a></div>
                       <h3>Riikka Koulu</h3>
-                      <!--
-                      <p>Title<span class="read-more-text">. story</span></p>
+                      <p>Associate Professor at University of Helsinki and leader of Helsinki Legal Tech Lab<span class="read-more-text">. Prof. Dr. Riikka Koulu is the Associate Professor (Social and Legal Implications of AI) at the Faculties of Social Sciences and Law, University of Helsinki, Finland. Since 2016, she also leads the University of Helsinki Legal Tech Lab, an interdisciplinary research hub that examines the intersections of law, technology, and society. She holds several positions inside and outside of academia, e.g. the chairperson of the Finnish Data Protection Ombudsman’s Expert Board; member of the Ethical Advisory Board of the Finnish Centre for Artificial Intelligence (FCAI); and associated researcher at the Alexander von Humboldt Institute for Internet and Society HIIG (Berlin). Her current research interests include automation of legal practices, AI ethics, policy and regulation, and procedural perspectives to technological design.</span></p>
                       <span class="read-more-btn">Read More...</span>
-                      -->
                     </div>
       
                     <div class="flex-item">
