New logos, side event and removed ticket button

--- a/footer.html
+++ b/footer.html
@@ -68,6 +68,11 @@
       <li class="flex-item" style="width: 170px;"><img src="images/collabs/Helsinki_District_Court_Logo.jpg"></a></li>
       <li class="flex-item" style="width: 230px;"><img src="images/collabs/Save_the_Children.png"></a></li>
       <li class="flex-item" style="width: 200px;"><img src="images/collabs/Domstolsverket.png"></a></li>
+      <li class="flex-item" style="width: 200px;"><img src="images/collabs/CLOB.png"></a></li>
+      <li class="flex-item" style="width: 140px;"><img src="images/collabs/NELD.png"></a></li>
+      <li class="flex-item" style="width: 240px;"><img src="images/collabs/FGV-Direito-SP.png"></a></li>
+      <li class="flex-item" style="width: 180px;"><img src="images/collabs/Helsinki-Incubators.png"></a></li>
+
 
       </ul>
     </div>
