--- a/index.html
+++ b/index.html
@@ -278,9 +278,16 @@
 					</li>
 					<li style="padding-bottom: 10px;">
 						<h4>2 May 2023</h4>
-						<p style="font-size: 20px;">All tickets for the summit are gone, but you can still join the waitlist. <a href="speakers.html" style="color: #50cec1; text-decoration: underline;">See more</a></p>
+						<p style="font-size: 20px;">All tickets for the summit are gone, but you can still join the waitlist. <a href="tickets.html" style="color: #50cec1; text-decoration: underline;">See more</a></p>
 					</li>
 				</ul>
+			</div>
+			<div class="col-md-6 col-xs-12">
+				<h3 style="padding-bottom: 50px;">Summit location</h3>
+				<p style="font-size: 20px; text-align: left;">Legal Design Summit is held in the Main hall of University of Helsinki, Located in: Unioninkatu 34, Helsinki Finland</p>
+				<p style="font-size: 20px; text-align: left; padding-top: 30px;">Here is a helpful map:</p>
+				<div><img src="images/backgrounds/Map-for-LDS-2023.png" class="img-fluid"></div>
+				
 			</div>
 		</div>
 
@@ -434,7 +441,11 @@
 	<li class="flex-item" style="width: 250px;"><a href="https://oikeus.fi/karajaoikeudet/helsinginkarajaoikeus/en/index.html" target="_blank"><img src="images/collabs/Helsinki_District_Court_Logo.jpg"></a></li>
 	<li class="flex-item" style="width: 300px;"><a href="https://www.pelastakaalapset.fi/en/frontpage/" target="_blank"><img src="images/collabs/Save_the_Children.png"></a></li>
 	<li class="flex-item" style="width: 270px;"><a href="https://www.domstol.se/domstolsverket/other-languages/english/" target="_blank"><img src="images/collabs/Domstolsverket.png"></a></li>
-	<li class="flex-item" style="width: 240px;"><a href="https://www.uchceu.com/en/advanced-learning-facilities/legal-tech" target="_blank"><img src="images/collabs/Erasmus_program.PNG"></a></li>
+	<li class="flex-item" style="width: 270px;"><a href="https://www.legaloperations.com.br/" target="_blank"><img src="images/collabs/CLOB.png"></a></li>
+	<li class="flex-item" style="width: 220px;"><a href="https://www.linkedin.com/company/neld-usp" target="_blank"><img src="images/collabs/NELD.png"></a></li>
+	<li class="flex-item" style="width: 260px;"><a href="https://www.helsinki.fi/en/networks/helsinki-incubators" target="_blank"><img src="images/collabs/Helsinki-Incubators.png"></a></li>
+	<li class="flex-item" style="width: 350px;"><a href="https://direitosp.fgv.br/en" target="_blank"><img src="images/collabs/FGV-Direito-SP.png"></a></li>
+	<li class="flex-item" style="width: 270px;"><a href="https://www.uchceu.com/en/advanced-learning-facilities/legal-tech" target="_blank"><img src="images/collabs/Erasmus_program.PNG"></a></li>
   </ul>
 
 </div>
