--- a/tickets.html
+++ b/tickets.html
@@ -107,13 +107,8 @@
 
 	  <div class="margin-top-40"></div>
 
-	  <h4>We are currently fully booked, but don't worry - you can still join the waiting list and be the first to know if any spots become available!</h4>
+	  <h4>We are currently fully booked, and waiting list is closed - See you in the Summit!</h4>
       <!-- <div style="height: 30px;" div class="margin-top-40"><h4><a href="https://ti.to/legal-design-summit-2023/legal-design-summit-2023" style="color: #50cec1;" class="link-hover">Link to the ticket site</a></h4></div> -->
-      <div class="actions">
-        <div class="row">
-      <div class="col-sm-12 justify-center-xs justify-center padding-top-xs-30"><a href="https://ti.to/legal-design-summit-2023/legal-design-summit-2023" class="btn light">Join the ticket waitlist</a></div>
-        </div>
-      </div>
     <p style="margin-top: 100px;"></p>
 
       
@@ -131,7 +126,7 @@
                 <li>Reassign/edit details OR scroll down to cancel your ticket. Cancelation cannot be undone</li>
                 <li>After that date, cancelation is no longer possible but you are free to find another participant yourself.  Please note that you should inform us who will be participating with your ticket because the participant needs to show a valid ID when collecting your/their badge. Any chances or questions should be sent to: tickets@legaldesignsummit.com</li>
                 </ul></p>
-            <h4>Tickets are sold out, can I register for a waiting list?</h4>Yes, you can register to the waiting list through the ticket release link. If a ticket comes available, you will get a registration link directly to your email. If you wish to secure a ticket, we have tickets set aside for out partners (both profit and non-profit). Please contact: partnerships@legaldesignsummit.com<p></p>
+            <h4>Tickets are sold out, can I register for a waiting list?</h4>Our waiting list is now closed, thank you for your interest!<p></p>
 
 		</div>
 	</div>
