--- a/program-wednesday.html
+++ b/program-wednesday.html
@@ -120,10 +120,14 @@
     </div>
 
     <table><colgroup><col style="width: 20%;"><col style="width: 70%"></colgroup>
-      <tbody class="timetable" style="padding-left: 20px;">
-        <tr>
-          <td><div class="image"><a href="https://www.dlapiper.com/en-us" target="_blank"><img src="images/collabs/DLA_Piper.jpg"></a></div></td>
+      <tbody class="timetable">
+        <tr style="padding-bottom: 20px;">
+          <td><div class="image" style="padding-bottom: 40px;"><a href="https://www.dlapiper.com/en-us" target="_blank"><img src="images/collabs/DLA_Piper.jpg"></a></div></td>
           <td><h3>Side event at DLA Piper - read more and register <a href="https://www.anpdm.com/newsletterweb/48425C47764541504579474059/40?noTracking=true" target="_blank" style="color: #50cec1; text-decoration: underline;">here</a></h3></td>
+        </tr>
+        <tr>
+          <td><div class="image"  style="width: 10em; padding-bottom: 40px;"><a><img src="images/backgrounds/legal-design-summit.png"></a></div></td>
+          <td><h3>Join the BrainFactory team for a casual after-work</h3><p> Join Brainfactory team at Clarion hotel (Tyynenmerenkatu 2, 00220 Helsinki) from 16:30 and onwards.<br>No prior registration required, just show up and meet fellow participants of the Legal Design Summit - guests welcomed!</p></td>
         </tr>
         <tr>
           <td></td>
