new speakers, partner logo and misspell correction

--- a/footer.html
+++ b/footer.html
@@ -70,6 +70,7 @@
       <li class="flex-item" style="width: 200px;"><img src="images/collabs/Domstolsverket.png"></a></li>
       <li class="flex-item" style="width: 200px;"><img src="images/collabs/CLOB.png"></a></li>
       <li class="flex-item" style="width: 140px;"><img src="images/collabs/NELD.png"></a></li>
+      <li class="flex-item" style="width: 150px;"><img src="images/collabs/TalTech.png"></a></li>
       <li class="flex-item" style="width: 240px;"><img src="images/collabs/FGV-Direito-SP.png"></a></li>
       <li class="flex-item" style="width: 180px;"><img src="images/collabs/Helsinki-Incubators.png"></a></li>
 
