--- a/index.html
+++ b/index.html
@@ -444,6 +444,7 @@
 	<li class="flex-item" style="width: 270px;"><a href="https://www.legaloperations.com.br/" target="_blank"><img src="images/collabs/CLOB.png"></a></li>
 	<li class="flex-item" style="width: 220px;"><a href="https://www.linkedin.com/company/neld-usp" target="_blank"><img src="images/collabs/NELD.png"></a></li>
 	<li class="flex-item" style="width: 260px;"><a href="https://www.helsinki.fi/en/networks/helsinki-incubators" target="_blank"><img src="images/collabs/Helsinki-Incubators.png"></a></li>
+	<li class="flex-item" style="width: 220px;"><a href="https://taltech.ee/en/department-law" target="_blank"><img src="images/collabs/TalTech.png"></a></li>
 	<li class="flex-item" style="width: 350px;"><a href="https://direitosp.fgv.br/en" target="_blank"><img src="images/collabs/FGV-Direito-SP.png"></a></li>
 	<li class="flex-item" style="width: 270px;"><a href="https://www.uchceu.com/en/advanced-learning-facilities/legal-tech" target="_blank"><img src="images/collabs/Erasmus_program.PNG"></a></li>
   </ul>
