--- a/program-friday.html
+++ b/program-friday.html
@@ -256,6 +256,30 @@
                     </div>
 
                     <div class="flex-item">
+                      <div class="image"><a><img src="images/speakers/2023/Kirsti-Lonka.jpeg"></a></div>
+                      <h3>Kirsi Lonka</h3>
+                      <p>Professor of Educational Psychology at University of Helsinki<span class="read-more-text">. Kirsti Lonka is Director of Research Group of Educational Psychology. Kirsti is also Extraordinary Professor, Optentia Research Focus Area, North-West University, Vanderbijlpark, South Africa (2016-) and Advisory Board Member of Graduate Institute of Digital Learning and Education, National Taiwan University of Science and Technology (NTUST 2015-).
+                        <br>Kirsti s currently leading WP2 (with Consortium PI Terhi-Anna Wilska, JYU) in a major strategic project “DigiConsumers: Learning to be digital consumers. How to improve young people’s financial skills in a technologically driven consumer society?”, funded by the Finnish Strategic Research Council CULT Program (2019-2025).
+                        <br>She has published more than hundred refereed articles, conference papers and book chapters. She has also published plenty of text books and popular writings. Her specialties are higher education, medical education, teacher education, and postgraduate education (PhD students). In the area of academic writing, her work has focused around conceptions of writing, note taking, process writing, portfolios and writing across curriculum (writing as a learning tool). At the moment, she is working on innovations in higher education and engaging learning environments (ELE).
+                      </span></p>
+                      <span class="read-more-btn">Read More...</span>
+                    </div>
+
+                    <div class="flex-item">
+                      <div class="image"><a><img src="images/speakers/2023/Aleida-Lujan-Pinelo.JPG"></a></div>
+                      <h3>Aleida Luján Pinelo</h3>
+                      <p>Postdoctoral researcher at the Faculty of Law, University of Turku<span class="read-more-text">. Aleida Luján-Pinelo  current work brings together epistemologies of the South and new (feminist) materialism to study and create practices that offer solutions to complex (legal) problems. She holds a master's degree in Gender and Women's Studies from the Universities of Granada and Utrecht, and a degree in philosophy from the Metropolitan Autonomous University, Mexico City. She is co-founder and co-coordinator of the independent project Feminizidmap, a database on femi(ni)cides in German territory. Her interests include feminist (legal) theory, new (feminist) materialism, epistemologies of the South, critical pedagogies, and femi(ni)cide.</span></p>
+                      <span class="read-more-btn">Read More...</span>
+                    </div>
+
+                    <div class="flex-item">
+                      <div class="image"><a><img src="images/speakers/2023/Andrea-Botero.jpg"></a></div>
+                      <h3>Andrea Botero</h3>
+                      <p>Associate Professor (New Frontiers of Design) at the School of Arts, Design and Architecture of Aalto University<span class="read-more-text">. Andrea Botero is Associate Professor (New Frontiers of Design) at the School of Arts, Design and Architecture of Aalto University where she leads INUSE research group, who explores designer-user relations in sociotechnical change. Her work engages with the possibilities, and contradictions of participating in the creation of environments, media and technologies that afford more relational and caring interactions among, and between people and their environment. Her design works explores technologies, services, media formats and genres for collectives and communities. Her research draws implications for how collectives come to understand the design spaces available to them and how designers could infrastructure those spaces better to support livable futures for communities and the environment. https://research.aalto.fi/en/persons/andrea-botero</span></p>
+                      <span class="read-more-btn">Read More...</span>
+                    </div>
+
+                    <div class="flex-item">
                       <div class="image"><a><img src="images/speakers/2023/cat-moon.jpg"></a></div>
                       <h3>Cat Moon</h3>
                       <p>Director of Innovation Design at Vanderbilt Law School and #MakeLawBetter Provocateur</p>
