--- a/brainfactory.html
+++ b/brainfactory.html
@@ -192,7 +192,7 @@
             <tbody>
               <tr>
                 <td class="bulp"><p>15:00</p></td>
-                <td><p>Introduction and Kick-Of</p></td>
+                <td><p>Introduction and Kick-Off</p></td>
               </tr>
 
               <tr>
