changed address details

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 					<h1 style="color: white;">Legal Design Summit</h1>
 					<p class="slogan-enhanced">11–13 SEP BRAINFACTORY | 14–15 SEP SUMMIT | HELSINKI, FINLAND</p><br><br>
 					<p class="slogan-long" style="font-weight: bold;">We are now looking for volunteers, <a href="volunteer.html" style="color: #50cec1; text-decoration: underline; font-weight: bold;">enlist here!</a></p>
-					<p class="slogan-long">Legal Design Summit is a platform for forward-thinking professionals from all over the globe.<br><br>The Largest legal design event in the world takes place in the Great Hall of the University of Helsinki, Unioninkatu 34.</p>
+					<p class="slogan-long">Legal Design Summit is a platform for forward-thinking professionals from all over the globe.<br><br>The Largest legal design event in the world takes place in the Great Hall of the University of Helsinki, Aleksanterinkatu 5.</p>
 				</div>
 			</div>
         <!-- HEADER Section Ends -->
@@ -284,7 +284,7 @@
 			</div>
 			<div class="col-md-6 col-xs-12">
 				<h3 style="padding-bottom: 50px;">Summit location</h3>
-				<p style="font-size: 20px; text-align: left;">Legal Design Summit is held in the Main hall of University of Helsinki, Located in: Unioninkatu 34, Helsinki Finland</p>
+				<p style="font-size: 20px; text-align: left;">Legal Design Summit is held in the Main hall of University of Helsinki, Located in: Aleksanterinkatu 5, Helsinki Finland</p>
 				<p style="font-size: 20px; text-align: left; padding-top: 30px;">Here is a helpful map:</p>
 				<div><img src="images/backgrounds/Map-for-LDS-2023.png" class="img-fluid"></div>
 				
