--- a/program-thursday.html
+++ b/program-thursday.html
@@ -129,7 +129,7 @@
       <tbody class="timetable" style="padding-left: 20px;">
         <tr>
           <td><h3>09.00-10.00</h3></td>
-          <td><h3>Registration and coffee @ Great Hall of the University of Helsinki, Unioninkatu 34</h3></td>
+          <td><h3>Registration and coffee @ Great Hall of the University of Helsinki, Aleksanterinkatu 5</h3></td>
         </tr>
         <tr>
           <td><h3>10.00-10.15</h3></td>
