--- a/program-friday.html
+++ b/program-friday.html
@@ -120,7 +120,7 @@
       <tbody class="timetable" style="padding-left: 20px;">
         <tr>
           <td><h3>09.00-10.00</h3></td>
-          <td><h3>Doors open @ Great Hall of the University of Helsinki, Unioninkatu 34</h3></td>
+          <td><h3>Doors open @ Great Hall of the University of Helsinki, Aleksanterinkatu 5</h3></td>
         </tr>
         <tr>
           <td><h3>10.00</h3></td>
