--- a/program-friday.html
+++ b/program-friday.html
@@ -257,9 +257,9 @@
 
                     <div class="flex-item">
                       <div class="image"><a><img src="images/speakers/2023/Kirsti-Lonka.jpeg"></a></div>
-                      <h3>Kirsi Lonka</h3>
+                      <h3>Kirsti Lonka</h3>
                       <p>Professor of Educational Psychology at University of Helsinki<span class="read-more-text">. Kirsti Lonka is Director of Research Group of Educational Psychology. Kirsti is also Extraordinary Professor, Optentia Research Focus Area, North-West University, Vanderbijlpark, South Africa (2016-) and Advisory Board Member of Graduate Institute of Digital Learning and Education, National Taiwan University of Science and Technology (NTUST 2015-).
-                        <br>Kirsti s currently leading WP2 (with Consortium PI Terhi-Anna Wilska, JYU) in a major strategic project “DigiConsumers: Learning to be digital consumers. How to improve young people’s financial skills in a technologically driven consumer society?”, funded by the Finnish Strategic Research Council CULT Program (2019-2025).
+                        <br>Kirsti is currently leading WP2 (with Consortium PI Terhi-Anna Wilska, JYU) in a major strategic project “DigiConsumers: Learning to be digital consumers. How to improve young people’s financial skills in a technologically driven consumer society?”, funded by the Finnish Strategic Research Council CULT Program (2019-2025).
                         <br>She has published more than hundred refereed articles, conference papers and book chapters. She has also published plenty of text books and popular writings. Her specialties are higher education, medical education, teacher education, and postgraduate education (PhD students). In the area of academic writing, her work has focused around conceptions of writing, note taking, process writing, portfolios and writing across curriculum (writing as a learning tool). At the moment, she is working on innovations in higher education and engaging learning environments (ELE).
                       </span></p>
                       <span class="read-more-btn">Read More...</span>
